--- a/app/design/frontend/creo/default/template/onestepcheckout/onepage/billing.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onepage/billing.phtml
@@ -7,7 +7,7 @@ $has_addr = $this->customerHasAddresses();
     <?php echo $this->__('Name & Address'); ?>
   </div><?php */?>
   <div class="page-header checkout-form-headings">
-    <h1><div class="skewed"><span class="re-skewed">1. billing and shipping</span></div></h1>
+    <h1><div class="skewed"><span class="re-skewed">1. <?php echo $this->__('billing and shipping'); ?></span></div></h1>
   </div>
   <div class="form_fields">
     <?php if ($has_addr){ ?>
