--- a/app/design/frontend/creo/default/template/onestepcheckout/onepage/payment.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onepage/payment.phtml
@@ -1,7 +1,7 @@
 <div id="payment-method" class="onestepcheckout_block">
   <div class="page-header checkout-form-headings paymentmethod-heading">
     <h1>
-      <div class="skewed"><span class="re-skewed"><?php echo $this->__('3. payment') ?></span></div>
+      <div class="skewed"><span class="re-skewed">3. <?php echo $this->__('payment') ?></span></div>
     </h1>
   </div>
   <div class="tool-tip" id="payment-tool-tip" style="display:none;">
