--- a/app/design/frontend/creo/default/template/onestepcheckout/onepage/review.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onepage/review.phtml
@@ -1,7 +1,7 @@
 <div id="checkout-review" class="onestepcheckout_block">
   <div class="page-header checkout-form-headings paymentmethod-heading">
     <h1>
-      <div class="skewed"><span class="re-skewed"><?php echo $this->__('4. reviews') ?></span></div>
+      <div class="skewed"><span class="re-skewed">4. <?php echo $this->__('reviews') ?></span></div>
     </h1>
   </div>
   <div id="checkout-review-load"> <?php echo $this->getChildHtml('info') ?> </div>
