--- a/app/design/frontend/creo/default/template/onestepcheckout/onepage/shipping_method.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onepage/shipping_method.phtml
@@ -3,7 +3,7 @@
 <div id="shipping-method" class="onestepcheckout_block">
   <div class="page-header checkout-form-headings shippingmethod_heading">
     <h1>
-      <div class="skewed"><span class="re-skewed"><?php echo $this->__('2. Shipping Method') ?></span></div>
+      <div class="skewed"><span class="re-skewed">2. <?php echo $this->__('Shipping Method') ?></span></div>
     </h1>
   </div>
   <div id="checkout-shipping-method-load"> <?php echo $this->getChildHtml('available') ?> </div>
