--- a/app/design/frontend/creo/default/template/checkout/cart.phtml
+++ b/app/design/frontend/creo/default/template/checkout/cart.phtml
@@ -41,7 +41,7 @@
       <div class="btn-holder">
         <?php foreach ($this->getMethods('top_methods') as $method): ?>
         <?php if ($methodHtml = $this->getMethodHtml($method)): ?>
-        <a href="<?php echo $this->getContinueShoppingUrl() ?>" onclick="window.history.go(-2); return false;"><span class="span1"><span class="span2">CONTINUE SHOPPING</span></span></a>
+        <a href="<?php echo $this->getContinueShoppingUrl() ?>" onclick="window.history.go(-2); return false;"><span class="span1"><span class="span2"><?php echo $this->__('CONTINUE SHOPPING'); ?></span></span></a>
         <?php /*?> <button type="button" title="<?php echo $this->__('Continue Shopping') ?>" class="button2 btn-continue" onclick="setLocation('<?php echo $this->getContinueShoppingUrl() ?>')"><span class="span1"><span class="span2"><?php echo $this->__('Continue Shopping') ?></span></span></button>
 <?php */?>
         <?php echo $methodHtml; ?>
@@ -75,7 +75,7 @@
               <th class="a-center cart-price-head" colspan="<?php echo $mergedCells; ?>"> <!--                            <div class="cart-price-placeholder">--> 
                 <span class="nobr"><?php echo $this->__('UNIT PRICE') ?></span> 
                 <!--                            </div>--> </th>
-              <th rowspan="<?php echo $mergedCells; ?>">Size</th>
+              <th rowspan="<?php echo $mergedCells; ?>"><?php echo $this->__('Size'); ?></th>
               <th rowspan="<?php echo $mergedCells; ?>" class="a-center"> <?php echo $this->__('QUANTITY') ?>
                 <?php /*if ($this->helper('wishlist')->isAllowInCart()) : ?>
                             <span class="nobr"><?php echo $this->__('Move to Wishlist') ?></span>
@@ -166,7 +166,7 @@
         <div class="btn-holder">
           <?php foreach ($this->getMethods('top_methods') as $method): ?>
           <?php if ($methodHtml = $this->getMethodHtml($method)): ?>
-          <a href="<?php echo $this->getContinueShoppingUrl() ?>" onclick="window.history.go(-2); return false;"><span class="span1"><span class="span2">CONTINUE SHOPPING</span></span></a>
+          <a href="<?php echo $this->getContinueShoppingUrl() ?>" onclick="window.history.go(-2); return false;"><span class="span1"><span class="span2"><?php echo $this->__('CONTINUE SHOPPING'); ?></span></span></a>
           <?php /*?> <button type="button" title="<?php echo $this->__('Continue Shopping') ?>" class="button2 btn-continue" onclick="setLocation('<?php echo $this->getContinueShoppingUrl() ?>')"><span class="span1"><span class="span2"><?php echo $this->__('Continue Shopping') ?></span></span></button>
 <?php */?>
           <?php echo $methodHtml; ?>
