--- a/app/design/frontend/creo/default/template/onestepcheckout/onestepcheckout.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onestepcheckout.phtml
@@ -1,25 +1,24 @@
 <div class="checkout-heading clearfix">
   <div class="cart-top-area clearfix">
-    <h2>CHECKOUT</h2>
+    <h2><?php echo $this->__('CHECKOUT'); ?></h2>
   </div>
 </div>
 <?php //echo Mage::getStoreConfig('onestepcheckout/general/title') ?>
 <!-- Fill in the fields below to complete your purchase! --> 
 
-<!-- Title description--> <?php echo Mage::getStoreConfig('onestepcheckout/general/description') ?> 
+<!-- Title description-->
+<?php echo Mage::getStoreConfig('onestepcheckout/general/description') ?> 
 <!-- Title description-->
 
 <?php if (!Mage::getSingleton('customer/session')->isLoggedIn()){ ?>
 <?php /*?> <a href="javascript:void(0)" class="onestepcheckout_loginlink" onclick='open_login();'>
             <?php echo $this->__('Already registered? Click here to login') ?>
         </a><?php */?>
-<?php 
-	
-		//echo $this->getChildHtml('customer.login');
-		//echo $this->getChildHtml('customer.forgot');
-	
-    }    
-    ?>
+<?php
+	//echo $this->getChildHtml('customer.login');
+	//echo $this->getChildHtml('customer.forgot');
+    }
+?>
 <div class='ptdivline'></div>
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 <?php
@@ -31,11 +30,10 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
 ?>
 <script type="text/javascript">
 	var http_type	= '<?php if($seq_http){echo 'https';}else{echo 'http';}?>';
-	
 	var mag_ver	= '<?php echo $mag_version;?>';
 	var mod_ver	= '<?php echo $mod_version;?>';
-</script> 
-<script type="text/javascript" src="<?php echo $this->getSkinUrl('js/onestepcheckout.js') ?>"></script> 
+</script>
+<script type="text/javascript" src="<?php echo $this->getSkinUrl('js/onestepcheckout.js') ?>"></script>
 <script type="text/javascript">countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?></script>
 <form action="" id="onestepcheckout_orderform" class="form-inline checkout-form">
   <?php echo $this->getChildHtml('billing.address') ?> <?php echo $this->getChildHtml('shipping.address') ?> <?php echo $this->getChildHtml('shipping.method') ?> <?php echo $this->getChildHtml('payment.method') ?>
@@ -78,7 +76,7 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
     jQuery(document).ready(function(){
 
       jQuery('#billing_customer_address').change(function(){
-        if (jQuery(this).val() == '' ) {  
+        if (jQuery(this).val() == '' ) {
           clear_form_elements('bill_form');
         }
       });
