--- a/app/design/frontend/creo/default/template/clarion/featuredproduct/list/list.phtml
+++ b/app/design/frontend/creo/default/template/clarion/featuredproduct/list/list.phtml
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="heading-holder">
-                <h2><?php echo $this->getBlockTitle(); ?></h2>
+                <h2><?php echo $this->__($this->getBlockTitle()); ?></h2>
             </div>
         </div>
     </div>
@@ -44,7 +44,7 @@
                                 </a>
                                 <div class="text-area">
                                     <h3>
-                                        <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->escapeHtml($_product->getName()) ?>"><?php echo $this->escapeHtml($_product->getName()) ?>
+                                        <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->escapeHtml($_product->getName()) ?>"><?php echo $this->__($this->escapeHtml($_product->getName())); ?>
                                         </a>
                                     </h3>
                                     <?php echo $this->getReviewsSummaryHtml($_product, 'short') ?>
