--- a/app/design/frontend/creo/default/template/extensions/collections/categories.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/categories.phtml
@@ -81,7 +81,7 @@ $_attrbiuteCollection = $this->getLoadedAttributeCollection();
         <li>
             <?php if ($a['value']): ?>
 
-                <a href="<?php echo Mage::getBaseUrl().'clothing/'.slugify($attr->getSource()->getOptionText($a)).'.html';//Mage::getBaseUrl() . "clothing.html?universal_categories=".$a['value']."" ?>"><?php echo $a['label']; ?></a>
+                <a href="<?php echo Mage::getBaseUrl().'clothing/'.slugify($a['label']).'.html';//Mage::getBaseUrl() . "clothing.html?universal_categories=".$a['value']."" ?>"><?php echo $a['label']; ?></a>
             <?php else: 
 			?>
             <a  class="fme_layered_clearall _selected_" href="<?php echo Mage::getBaseUrl() . "clothing.html" ?>">View All</a>
@@ -256,7 +256,7 @@ $_helper = $this->helper('catalog/output');
 	?>
         <li>
             <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a['value']); ?>
-	<a href="<?php echo Mage::getBaseUrl() . "clothing.html?universal_categories=".$a['value']."" ?>">
+	<a href="<?php echo Mage::getBaseUrl().'clothing/'.slugify($a['label']).'.html';//Mage::getBaseUrl() . "clothing.html?universal_categories=".$a['value']."" ?>">
 	<?php if ($_img): ?>
                     <img src="<?php echo $this->escapeHtml($_img); ?>" alt="<?php echo $a['label']; ?>" />
                 <?php endif; ?>
