--- a/app/design/frontend/creo/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/men.phtml
@@ -266,7 +266,7 @@ $_helper = $this->helper('catalog/output');
 	?>
         <li>
         <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a); ?>
-		<a href="<?php echo Mage::getBaseUrl() . "clothing/men.html?universal_categories=".$a."" ?>">
+		<a href="<?php echo Mage::getBaseUrl().'clothing/men/'.slugify($attr->getSource()->getOptionText($a)).'.html';//Mage::getBaseUrl() . "clothing/men.html?universal_categories=".$a."" ?>">
 		<?php if ($_img): ?>
                     <img src="<?php echo $this->escapeHtml($_img); ?>" alt="" />
                 <?php endif; ?>
