--- a/app/design/frontend/creo/default/template/extensions/collections/women.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/women.phtml
@@ -260,7 +260,7 @@ $_helper = $this->helper('catalog/output');
             ?>
         <li>
                 <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a); ?>
-                <a href="<?php echo Mage::getBaseUrl() . "clothing/women.html?universal_categories=".$a."" ?>">
+                <a href="<?php echo Mage::getBaseUrl().'clothing/women/'.slugify($attr->getSource()->getOptionText($a)).'.html';//Mage::getBaseUrl() . "clothing/women.html?universal_categories=".$a."" ?>">
                 <?php if ($_img): ?>
                     <img src="<?php echo $this->escapeHtml($_img); ?>" alt="" />
                 <?php endif; ?>
