--- a/app/design/frontend/creo_mobile/default/template/persistent/customer/form/login.phtml
+++ b/app/design/frontend/creo_mobile/default/template/persistent/customer/form/login.phtml
@@ -49,67 +49,68 @@
             <?php else: ?>
                 <?php echo $this->__('Login'); ?>
             <?php endif; ?></h2>
-	
+
 <?php echo $this->getMessagesBlock()->toHtml() ?>
   <div class="form-holder login-sec col-sm-6 no-padding-left">
    <div class="form-frame">
-    
+
     <form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="login-form" class="scaffold-form">
         <?php echo $this->getBlockHtml('formkey'); ?>
-        
+
             <?php if ($this->helper('customer')->isRegistrationAllowed()): ?>
- 
+
                 <?php /*?>
                     <h3><?php echo $this->__('New Here?') ?></h3>
                     <p class="form-instructions"><?php echo $this->__('Registration is free and easy!') ?></p>
                     <p>
-                      <?php echo $this->__('Faster checkout <br> Save multiple shipping addresses <br>View and track orders and more') ?>      
+                      <?php echo $this->__('Faster checkout <br> Save multiple shipping addresses <br>View and track orders and more') ?>
                     </p>
                     <div class="submit-holder">
                     <button type="submit" class="button" onClick="window.location='<?php echo Mage::helper('persistent')->getCreateAccountUrl($this->getCreateAccountUrl()) ?>'"  title="<?php echo $this->__('Create an Account') ?>" ><span><span><?php echo $this->__('Create an Account') ?></span></span></button>
                 </div>
                 <?php */?>
-           
+
             <?php endif; ?>
             <?php // This column should be col-1 if the registration column is not displayed ?>
-           
-              
+
+
                     <h3><?php echo $this->__('Already registered?') ?></h3>
                     <p class="form-instructions"><?php echo $this->__('If you have an account with us, please log in.') ?></p>
-                    
+
                             <label for="email" class="required "><span class="red marg-right">*</span><?php echo $this->__('Email Address') ?></label>
-                            
+
                                 <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="login[username]" value="<?php echo $this->escapeHtml($this->getUsername()) ?>" id="email" class="input-text validate-emailAdress validate-email email" title="<?php echo $this->__('Email Address') ?>" />
-                            
-                        
+
+
                             <label for="pass" class="required"><em class="red marg-right">*</em><?php echo $this->__('Password') ?></label>
-                           
+
                                 <input type="password" name="login[password]" class="input-text validate-passwordlogin validate-password email" id="pass" title="<?php echo $this->__('Password') ?>" />
-                         
-                        
+
+
                         <?php echo $this->getChildHtml('form.additional.info'); ?>
-                        
+
                         <?php echo $this->getChildHtml('persistent.remember.me'); ?>
-                    
+
                     <?php // echo $this->getChildHtml('persistent.remember.me.tooltip'); ?>
-                    
+
 				 <?php /*?><p class="required red"><?php echo $this->__('* Required Fields') ?></p><?php */?>
-                 
+
                  <?php /*?><a href="<?php echo $this->getForgotPasswordUrl() ?>" class="f-left"><?php echo $this->__('Forgot Your Password?') ?></a><?php */?>
-                 
+
                 <div class="submit-holder btn-holder">
-                <button type="button" class="pull-left" onclick="window.location.href='<?php echo $this->getForgotPasswordUrl() ?>'"><span class="span1"><span class="span2">Forgot password?</span></span></button>
+                <button type="button" class="pull-left" onclick="window.location.href='<?php echo $this->getForgotPasswordUrl() ?>'"><span class="span1"><span class="span2"><?php echo $this->__('Forgot password'); ?>?</span></span></button>
                     <button type="submit" class="button" title="<?php echo $this->__('Login') ?>" name="send" id="send2"><span><span><?php echo $this->__('Login') ?></span></span></button>
                 </div>
 
-        
-       
+
+
         <?php if (Mage::helper('checkout')->isContextCheckout()): ?>
             <input name="context" type="hidden" value="checkout" />
         <?php endif; ?>
     </form>
-<?php ?>    <div class="login-fb">
-				<?php echo $this->getLayout()->createBlock('fblogin/fblogin')->setTemplate('fblogin/bt_fblogin.phtml')->toHtml() ; ?>
+<?php ?>
+<div class="login-fb">
+	<?php echo $this->getLayout()->createBlock('fblogin/fblogin')->setTemplate('fblogin/bt_fblogin.phtml')->toHtml() ; ?>
     </div><?php ?>
     <?php echo $this->getChildHtml('form_register');?>
 </div>
