--- a/skin/frontend/creo_mobile/default/style-ar.css
+++ b/skin/frontend/creo_mobile/default/style-ar.css
@@ -18,13 +18,16 @@ footer#footer{direction:rtl;}
 .main-menu .bgr-icon{left:inherit;}
 .product-detail .price-area .availability,#header .cart,a.search-icon.glyphicon.glyphicon-search{float:left;}
 .canvas-slid .main-menu .bgr-icon {right:250px;left:inherit;}
-/*.searchautocomplete .searchautocomplete-placeholder:before{left:30px;}
-#nav ol > li,#nav .featured-items .featured-products li,#footer .column,#footer .social li,.price-area .price-info,
-.faq-area.return-area .step-col li,.signup-form .row .col,.form-holder .form-frame,.nav li, form li,.checkoutShippingMethod ul li input,
-.checkoutShippingMethod ul li label,.product-detail .price-area .price{float:right;}
-#nav .links-area .sorting-items{margin-left:15px;text-align:right;}
-#footer .column.column1{width:auto;}
+.searchautocomplete .searchautocomplete-placeholder:before{left:52px;}
+#nav .links-area{margin-left:15px;text-align:right;}
 .product-detail .btn-holder button:first-child .span1{margin-left:0;margin-right:10px;}
+#nav .featured-items .featured-products li,#footer .column,#footer .social li,.price-area .price-info,
+.faq-area.return-area .step-col li,.signup-form .row .col,.form-holder .form-frame,.nav li, form li,.checkoutShippingMethod ul li input,
+.checkoutShippingMethod ul li label,.product-detail .price-area .price,.product-swatches-container .has-swatches li{float:right;}
+.product-detail .price-area{padding:10px 0;}
+#last_most_view_box_sub,.tshirtsize,.form-holder .btn-holder button:first-child,.tab-links,.cart-top-area{direction:ltr;}
+.tshirtsize .heading{padding:8px 12px;}
+/*#footer .column.column1{width:auto;}
 .products-grid .btn-holder a:first-child .span1{margin-left:0;margin-right:-10px;}
 .category--heading span:before,.shipping-methods h3 span:before, #last_most_view_title > h3 span:before,.faq-area h3 span:before,
 .tab-content2 .dark-heading span:before,.three-column h3 span:before{border-color: transparent #000 transparent #000;
@@ -37,7 +40,7 @@ border-width: 30px 6px 0 0px;left:inherit;right:100%;}
 #savePopup .form-horizontal .form-group p,.modal-holder .login-form label{text-align:right;}
 .order-details-table th:first-child{text-align:center;}
 .catalog-product-view .text-area .qty-area label{display:block;}
-#last_most_view_box_sub,.tshirtsize,.form-holder .btn-holder button:first-child,.tab-links,.cart-top-area{direction:ltr;}
+
 .faq-area.return-area .step-col li,.form-holder .form-frame{margin: 0 0% 0 2%;}
 .faq-area .faq-frame .open-close2{margin:0 0 18px 2%;}
 .faq-area .openeer-holder .question span{padding:0 7px;}
@@ -50,16 +53,16 @@ padding-right:30px;}
 #checkout-payment-method-load .paymentradiobutton, #checkout-payment-method-load .paymentradiobuttonlabel{float:none;
 white-space:nowrap;}
 .cart-btn-area .btn-holder .button2 .span2, .cart-btn-area .btn-holder .button2:first-child .span2{padding-left:25px;}
-#header .login-area .opener,.options-area label,h3.item-title,.breadcrumb1 li{white-space:nowrap;}
 #header .cart .opener .count{left:inherit;right:15px;}
 .pdc-design-view .edit-tools{left:0;}
 .layer-final label{float:right !important;white-space:nowrap;}
 #product-options-wrapper{width:84%;}
-.breadcrumb1 li{float: right;margin: 0 0 0 45px;}
 .icon-angle-left:before{content: '\e810';}
 .icon-angle-right:before{content: '\e80f';}
 .design_categories_attributes ul li{margin:0 0% 1% 1%;}
 .design_categories_attributes ul li:nth-child(4n){margin-left:0;}
 */
+#header .login-area .opener,.options-area label,h3.item-title,.breadcrumb1 li{white-space:nowrap;}
+.breadcrumb1 li{float: right;margin: 0 0 0 45px;}
 .footer_navigation .panel-heading .panel-title, .footer_navigation .panel-heading .panel-title a,
 .footer_navigation .panel-group .panel .panel-collapse ul{padding-right:10px;}
