--- a/app/design/frontend/creo_mobile/default/template/checkout/cart.phtml
+++ b/app/design/frontend/creo_mobile/default/template/checkout/cart.phtml
@@ -41,7 +41,7 @@
       <div class="btn-holder">
         <?php foreach ($this->getMethods('top_methods') as $method): ?>
         <?php if ($methodHtml = $this->getMethodHtml($method)): ?>
-        <a href="<?php echo $this->getContinueShoppingUrl() ?>" onclick="window.history.go(-2); return false;"><span class="span1"><span class="span2">CONTINUE SHOPPING</span></span></a>
+        <a href="<?php echo $this->getContinueShoppingUrl() ?>" onclick="window.history.go(-2); return false;"><span class="span1"><span class="span2"><?php echo $this->__('CONTINUE SHOPPING'); ?></span></span></a>
         <?php /*?> <button type="button" title="<?php echo $this->__('Continue Shopping') ?>" class="button2 btn-continue" onclick="setLocation('<?php echo $this->getContinueShoppingUrl() ?>')"><span class="span1"><span class="span2"><?php echo $this->__('Continue Shopping') ?></span></span></button>
 <?php */?>
         <?php echo $methodHtml; ?>
@@ -135,12 +135,12 @@
   </div>
   <div class="row">
     <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <div class="cart-bottom-area">        
+      <div class="cart-bottom-area">
         <?php echo $this->getChildHtml('totals'); ?>
         <div class="btn-holder">
           <?php foreach ($this->getMethods('top_methods') as $method): ?>
           <?php if ($methodHtml = $this->getMethodHtml($method)): ?>
-          <a href="<?php echo $this->getContinueShoppingUrl() ?>" onclick="window.history.go(-2); return false;"><span class="span1"><span class="span2">CONTINUE SHOPPING</span></span></a>
+          <a href="<?php echo $this->getContinueShoppingUrl() ?>" onclick="window.history.go(-2); return false;"><span class="span1"><span class="span2"><?php echo $this->__('CONTINUE SHOPPING'); ?></span></span></a>
           <?php /*?> <button type="button" title="<?php echo $this->__('Continue Shopping') ?>" class="button2 btn-continue" onclick="setLocation('<?php echo $this->getContinueShoppingUrl() ?>')"><span class="span1"><span class="span2"><?php echo $this->__('Continue Shopping') ?></span></span></button>
 <?php */?>
           <?php echo $methodHtml; ?>
@@ -158,6 +158,4 @@
         </span> </div>
     </div>
   </div>
-
   <?php echo $this->getChildHtml('crosssell') ?> </div>
-
