--- a/app/design/frontend/creo_mobile/default/template/checkout/onepage.phtml
+++ b/app/design/frontend/creo_mobile/default/template/checkout/onepage.phtml
@@ -36,7 +36,7 @@
     <li id="opc-<?php echo $_stepId ?>" class="section<?php echo !empty($_stepInfo['allow'])?' allow':'' ?><?php echo !empty($_stepInfo['complete'])?' saved':'' ?>">
         <div class="step-title">
             <span class="number"><?php echo $i ?></span>
-            <h2><?php echo $_stepInfo['label'] ?></h2>
+            <h2><?php echo $this->__($_stepInfo['label']); ?></h2>
             <a href="#"><?php echo $this->__('Edit') ?></a>
         </div>
         <div id="checkout-step-<?php echo $_stepId ?>" class="step a-item" style="display:none;">
