--- a/app/design/frontend/creo_mobile/default/template/onestepcheckout/onestepcheckout.phtml
+++ b/app/design/frontend/creo_mobile/default/template/onestepcheckout/onestepcheckout.phtml
@@ -1,24 +1,24 @@
 <div class="checkout-heading clearfix">
   <div class="cart-top-area clearfix">
-    <h2>CHECKOUT</h2>
+    <h2><?php echo $this->__('CHECKOUT'); ?></h2>
   </div>
 </div>
 <?php //echo Mage::getStoreConfig('onestepcheckout/general/title') ?>
-<!-- Fill in the fields below to complete your purchase! --> 
+<!-- Fill in the fields below to complete your purchase! -->
 
-<!-- Title description--> <?php echo Mage::getStoreConfig('onestepcheckout/general/description') ?> 
+<!-- Title description--> <?php echo Mage::getStoreConfig('onestepcheckout/general/description') ?>
 <!-- Title description-->
 
 <?php if (!Mage::getSingleton('customer/session')->isLoggedIn()){ ?>
 <?php /*?> <a href="javascript:void(0)" class="onestepcheckout_loginlink" onclick='open_login();'>
             <?php echo $this->__('Already registered? Click here to login') ?>
         </a><?php */?>
-<?php 
-	
+<?php
+
 		//echo $this->getChildHtml('customer.login');
 		//echo $this->getChildHtml('customer.forgot');
-	
-    }    
+
+    }
     ?>
 <div class='ptdivline'></div>
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
@@ -34,7 +34,7 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
 	var mag_ver	= '<?php echo $mag_version;?>';
 	var mod_ver	= '<?php echo $mod_version;?>';
 </script>
-<script type="text/javascript" src="<?php echo $this->getSkinUrl('js/onestepcheckout.js') ?>"></script> 
+<script type="text/javascript" src="<?php echo $this->getSkinUrl('js/onestepcheckout.js') ?>"></script>
 <script type="text/javascript">countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?></script>
 <form action="" id="onestepcheckout_orderform" class="form-inline checkout-form">
   <?php echo $this->getChildHtml('billing.address') ?> <?php echo $this->getChildHtml('shipping.address') ?> <?php echo $this->getChildHtml('shipping.method') ?> <?php echo $this->getChildHtml('payment.method') ?>
@@ -45,12 +45,12 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
   <div class="textfix">
   <?php if (Mage::helper('onestepcheckout')->isSubscribeNewAllowed()) : ?>
   <input type="checkbox" id="newsletter-signup" name="newsletter" value="1" title="<?php echo Mage::helper('newsletter')->__('Sign up for our newsletter') ?>" class="checkbox" />
-  <label for="newsletter-signup"> 
+  <label for="newsletter-signup">
   <?php echo Mage::helper('newsletter')->__('Sign up for our newsletter') ?> </label>
   <?php endif; ?>
   </div>
-  
-  <?php echo $this->getChildHtml('review') ?> 
+
+  <?php echo $this->getChildHtml('review') ?>
   <?php //echo $this->getChildHtml('coupon') ?>
 </form>
 <script type="text/javascript">
@@ -77,7 +77,7 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
     jQuery(document).ready(function(){
 
       jQuery('#billing_customer_address').change(function(){
-        if (jQuery(this).val() == '' ) {  
+        if (jQuery(this).val() == '' ) {
           clear_form_elements('bill_form');
         }
       });
